2007-10-16  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.ss: Accept COMMON in readelf's output.
	* binutils-all/readelf.ss-64: Likewise.
	* binutils-all/readelf.ss-mips: Likewise.
	* binutils-all/readelf.ss-tmips: Likewise.
	
2007-08-30  Nick Clifton  <nickc@redhat.com>

	* binutils-all/dumptest.s: New test file.
	* binutils-all/readelf.exp: Add test of readelf's -p switch.

2007-08-28  Mark Shinwell  <shinwell@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>

	* binutils-all/ar.exp (long_filenames): Delete temporary files on
	the host.
	* binutils-all/arm/objdump.exp: Only check "which $OBJDUMP" if
	host is local.
	* binutils-all/objcopy.exp: Use ${srecfile} to get the name of the
	srec file to be passed to binutils_run.
	(objcopy_test_readelf): Use remote_exec.
	* binutils-all/readelf.exp (readelf_find_size): Use remote_exec.
	(readelf_test): Likewise.
	(readelf_wi_test): Likewise.
	* lib/utils-lib.exp (run_dump_test): Only check "which $binary" if
	host is local.  Use remote_exec.  Use $tempfile not
	tmpdir/bintest.o.

2007-08-09  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/copy-2.d (not-target): Match *-*-*aout.
	* binutils-all/copy-3.d (not-target): Likewise.
	* binutils-all/objcopy.exp (objcopy_test): Remove extraneous
	setup_xfail.
	* windres/windres.exp: Return unsupported rather than fail if
	windows.h not found.

2007-07-05  Nick Clifton  <nickc@redhat.com>

	* lib/utils-lib.exp: Update copyright notice to refer to GPLv3.
	* config/default.exp, binutils-all/ar.exp,
	binutils-all/dlltool.exp, binutils-all/nm.exp,
	binutils-all/objcopy.exp, binutils-all/arm/objdump.exp,
	binutils-all/hppa/objdump.exp, binutils-all/m68k/objdump.exp,
	binutils-all/vax/objdump.exp, binutils-all/windres/windres.exp,
	binutils-all/windres/msupdate: Likewise.

2007-06-23  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/strip-3.d: Also strip .xtensa.info section.

2007-05-24  Kai Tietz  <Kai.Tietz@onevision.com>
